--- a/07.01-206-divs-flexbox-starter/css/main.css
+++ b/07.01-206-divs-flexbox-starter/css/main.css
@@ -94,8 +94,6 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
 html {
   background-color: #000000;
   height: 100%;
@@ -115,8 +113,9 @@ body {
 }
 
 header {
-  display: flex;
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 header h1 {
@@ -134,6 +133,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #808080;
+  margin-bottom: 20px;
 }
 
 main p {
@@ -154,7 +155,6 @@ p span {
   align-items: center;
 }
 
-
 .flex-items {
   display: flex;
   justify-content: center;
@@ -162,37 +162,34 @@ p span {
   line-height: 1.5em;
   font-size: 1em;
   flex-flow: row wrap;
-  border-bottom: 1px solid #808080;
 }
-
 
 footer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin-bottom: 20px;
+  border-top: 1px solid #808080;
+  margin-top: 20px;
 }
 
 footer i {
   padding: 30px 20px 0 0;
   display: flex;
+  align-items:center;
+  color: #3FE0D0;
 }
-
 
 .wrapper { /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
-
-
 
 #div-1, #div-2 {
   border-right: 1px solid #808080;
-
 }
 
 #div-1 {
